@@ -1,4 +1,4 @@
-# Copyright 2007 Mike Burns
+# Copyright 2007-2008 Mike Burns & John Nagro
 # :include: README
 
 # Redistribution and use in source and binary forms, with or without
